# quantum-assistant

./: .gitattributes  .gitignore  INSTALL.md  README.md  env.example  pyproject.toml  requirements.txt  setup.py
.github/workflows/: hf-spaces-deploy.yml
docker/server/: Dockerfile.vllm  docker-compose.yml  entrypoint.sh
docs/: evaluate.md  finetune.md  models.md  synthetic.md
notebook/: test_train.ipynb  train.ipynb
scripts/: benchmark_models.py  eval_models.sh  experiment.sh  tune.sh
src/demo/: .dockerignore  .env.local.example  Dockerfile  README.md  next.config.js  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.json
src/demo/src/app/: globals.css  layout.tsx  page.tsx
src/demo/src/app/api/chat/: route.ts
src/demo/src/app/api/examples/: route.ts
src/demo/src/app/api/execute/: route.ts
src/demo/src/app/api/status/: route.ts
src/demo/src/app/api/test/: route.ts
src/demo/src/app/api/warmup/: route.ts
src/demo/src/components/: index.ts
src/demo/src/components/Chat/: ChatInterface.tsx  ExecutionResult.tsx  LoadingStatus.tsx  Message.tsx  MessageInput.tsx  QubitIcon.tsx  WarmupIndicator.tsx
src/demo/src/components/Examples/: ExampleCard.tsx  ExamplesPanel.tsx
src/demo/src/components/Header/: Header.tsx
src/demo/src/components/Practice/: AIHelper.tsx  CodeEditor.tsx  PracticeInterface.tsx  ProblemList.tsx  TestRunner.tsx  index.ts
src/demo/src/components/ResizablePanel/: ResizablePanel.tsx
src/demo/src/config/: constants.ts
src/demo/src/lib/api/: vlm-client.ts
src/demo/src/lib/dataset/: DatasetProvider.tsx  loader.ts
src/demo/src/lib/hooks/: useWarmup.ts
src/demo/src/lib/utils/: image.ts  response.ts
src/demo/src/types/: index.ts
src/evaluate/: README.md  SYSTEM_PROMPTS.md  __init__.py  cli.py
src/evaluate/config/: __init__.py  eval_config.yaml  eval_synthetic.yaml  qiskit_humaneval_hard.yaml  qiskit_humaneval_normal.yaml  schema.py  synthetic.yaml  system_prompts.py
src/evaluate/evaluators/: __init__.py  base.py  code.py  multimodal.py
src/evaluate/execution/: __init__.py  sandbox.py
src/evaluate/metrics/: __init__.py  base.py  code_metrics.py  text_metrics.py
src/evaluate/runners/: __init__.py  qiskit_humaneval.py  synthetic.py
src/evaluate/utils/: __init__.py  results.py
src/finetune/: README.md  __init__.py  cli.py  config.py  experiments.yaml  formatter.py  image_processor.py  preparer.py  pyproject.toml
src/finetune/yaml/: base.yaml  data_config.yaml  exp_dora.yaml  exp_olora.yaml  exp_pissa.yaml  exp_rslora.yaml  experiments.yaml  swift.yaml
src/models/: __init__.py  benchmark.py  client.py  registry.py
src/synthetic_data/: README.md  __init__.py
src/synthetic_data/cli/: __init__.py  commands.py  generation_commands.py  main.py
src/synthetic_data/config/: __init__.py  schema.py
src/synthetic_data/dataset/: __init__.py  analyzer.py  builder.py  exporter.py  plotter.py
src/synthetic_data/extractors/: __init__.py  chunker.py  ingestion.py  transcriber.py
src/synthetic_data/generators/: __init__.py  allocation.py  category.py  pipeline.py  planner.py  prompts.py  sessions.py  types.py
src/synthetic_data/generators/stages/: __init__.py  answer.py  classify.py  curate.py  filter_candidates.py  plan.py
src/synthetic_data/models/: __init__.py  types.py
src/synthetic_data/parsers/: __init__.py  base.py  jupyter.py  mdx.py  pdf.py  toc.py
src/synthetic_data/tools/: __init__.py  allocation_analyzer.py  pipeline_analyzer.py  pipeline_plotter.py
src/synthetic_data/utils/: __init__.py  cache.py  checkpoint.py  code_verifier.py  colors.py  deduplication.py  function_extractor.py  image_converter.py  image_filter.py  image_resolver.py  quality.py  test_generator.py  tracer.py
src/synthetic_data/yaml/: config.yaml  config_test.yaml
tests/: run_vlm_integration_test.py  test_code_verifier.py  test_evaluation.py  test_function_extractor.py  test_integration.py  test_pipeline.py  test_pipeline_steps.py  test_vlm_images.py
