[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic-data"
version = "0.1.0"
description = "Clean synthetic dataset generation pipeline"
authors = [
    {name = "Samuel", email = "samuellimabraz@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "nbformat>=5.9.0",
    "pillow>=10.0",
    "datasets>=2.16.0",
    "tqdm>=4.66.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pymupdf>=1.23.0",
    "python-dotenv>=1.0.0",
    "qiskit>=2.2.3",
    "scipy>=1.15.3",
    "pytest>=9.0.0",
    "wand>=0.6.13",
    "pip>=25.3",
    "qiskit-machine-learning>=0.8.2",
    "qiskit-ibm-runtime>=0.43.1",
    "qiskit-aer>=0.17.2",
    "torch>=2.9.1",
    "qiskit-addon-sqd>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
synthetic-data = "synthetic_data.cli.main:app"
evaluate = "evaluate.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]
