[project]
name = "finetune"
version = "0.1.0"
description = "Finetuning pipeline for quantum VLM"
requires-python = ">=3.12"
dependencies = [
    "ms-swift>=3.10.3",
    "transformers>=4.57.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "qwen_vl_utils>=0.0.14",
    "decord>=0.6.0",
    "librosa>=0.11.0",
    "icecream>=2.1.8",
    "hf_transfer>=0.1.9",
    "wandb>=0.23.1"
]

[project.optional-dependencies]
# GPU acceleration libraries (excluding flash-attn - install separately)
gpu = [
    "deepspeed>=0.16.0",
    "liger-kernel>=0.6.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]



